--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 	<main>
 		<section id="introduction" class="section">
 			<h2>Introduction</h2>
-			<article>
+			<div class="content">
 				<p><strong>jQuery</strong> is an open source <strong>JavaScript library</strong> that simplifies the interactions between an HTML/CSS document, or more precisely the Document Object Model (DOM), and JavaScript.<br>One important thing to know is that jQuery is just a <strong>JavaScript library</strong>. All the power of jQuery is accessed via JavaScript, so having a strong grasp of JavaScript is essential for understanding, structuring, and debugging your code.</p>
 				<p>Some of the key points which supports the answer for why to use jQuery:</p>
 				<ul>
@@ -37,13 +37,13 @@
 					<li>Its repository of plugins is vast and has seen steady growth since jQuery’s release.</li>
 					<li>Its API is fully documented, including inline code examples, which in the world of JavaScript libraries is a luxury.</li>
 				</ul>
-			</article>
+			</div>
 		</section>
 		<hr>	
 			
 		<section id="distribution" class="section">
 			<h2>Distribution</h2>
-			<article>
+			<div class="content">
 				<p>The jQuery library is typically distributed as a single JavaScript file that defines all its interfaces, including DOM, Events, and Ajax functions. It can be included within a Web page by linking to a local copy, or by linking to one of the many copies available from public servers. jQuery has a <a href="https://en.wikipedia.org/wiki/Content_delivery_network" title="content delivery network">content delivery network</a> (CDN) hosted by MaxCDN. Google in Google Hosted Libraries service and Microsoft host the library as well.</p>
 				<p>Example of linking a copy of the library locally (from the same server that hosts the Web page):</p>
 				<p class="line-code"><code>&lt;script src="jquery.js"&gt;&lt;/script&gt;</code></p>
@@ -56,13 +56,13 @@ integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
 crossorigin="anonymous"&gt;&lt;/script&gt;
 					</code></pre>        				
 				</div>	
-			</article>
+			</div>
 		</section>
 		<hr>
 
 		<section id="selectors" class="section">
 			<h2>Selectors</h2>
-			<article>
+			<div class="content">
 				<p><strong>jQuery selectors</strong> are used to select the HTML element(s) and allows you to manipulate the HTML element(s) in a way we want. It selects the HTML elements on a variable parameter such as their <span>name, classes, id, types, attributes, attribute values, etc.</span> All selectors in jQuery are selected using a special sign i.e. <strong>dollar sign and parentheses</strong>:</p>
 				<p class="line-code"><code>$("selector-name")</code></p>
 				<ul>
@@ -112,26 +112,26 @@ crossorigin="anonymous"&gt;&lt;/script&gt;
 						</div>
 					</li>	
 				</ul>
-			</article>
+			</div>
 		</section>
 		<hr>
 
 		<section id="event-methods" class="section">
 			<h2>Event Methods</h2>
-			<article>
+			<div class="content">
 				<p><strong>Event</strong> refers to the <strong>actions</strong> performed by the site visitor during their interactivity with the website (or webpage).There can be various types of events such as:</p>
 				<ol>
 					<li>User clicks on the button.</li>
 					<li>User moves mouse pointer over an image.</li>
 					<li>User pressed any key from keyboard, etc.</li>
 				</ol>
-			</article>
+			</div>
 		</section>
 		<hr>
 
 		<section id="hide-and-show-method" class="section">
 			<h2>Hide and Show Method</h2>
-			<article>
+			<div class="content">
 				<p><strong>jQuery methods</strong> allow us to quickly apply commonly used effects with a minimum configuration.</p>
 				<ul>
 					<li><strong>jQuery hide() :</strong> Hides the Syntax or the element of html that you want to hide.
@@ -142,13 +142,13 @@ crossorigin="anonymous"&gt;&lt;/script&gt;
 					</li>
 				</ul>
 				<p>For both syntaxes above, the <span>speed</span> parameter is a optional parameter used for defining the speed of hiding and showing of the content of html. Durations can be specified either using one of the predefined string ‘slow’ or ‘fast’, or in a number of milliseconds, for greater precision; higher values indicate slower animations.The <span>callback</span> parameter is optional parameter used after the hiding and the showing function is completed.</p>
-			</article>	
+			</div>	
 		</section>
 		<hr>
 
 		<section id="draggable-and-droppable" class="section">
 			<h2>Draggable and Droppable</h2>
-			<article>
+			<div class="content">
 				<p><strong>jQuery UI</strong> is a mixture of methods and a set of user interface effects, widgets, interactions and themes which can be provided in the web page using jQuery methods. If you want to build up a powerful web application that includes various features such as <span>dragging, dropping, date picker, tooltips, etc.</span> then jQuery UI is a perfect choice to build up these effects.</p>
 				<h3>Draggable Method</h3>
 				<p>This method allows the elements to be <span>dragged</span> with the help of mouse. Using jQuery UI, we can make the DOM(Document Object Model) elements to drag anywhere within the view port.</p>
@@ -166,13 +166,13 @@ crossorigin="anonymous"&gt;&lt;/script&gt;
 						<p class="line-code"><code>$(selector, context).droppable ("action", params)</code></p>
 					</li>
 				</ul>
-			</article>
+			</div>
 		</section>
 		<hr>
 
 		<section id="comments" class="section">
 			<h2>Comments</h2>
-			<article>
+			<div class="content">
 				<p>jQuery comments are started with a double forward slash which tells the interpreter that the following text on the line is not to be processed as JavaScript. jQuery comments can be either inside a function or outside it makes no difference.</p>
 				<div class="box-pre">
 					<pre><code>
@@ -193,20 +193,20 @@ function myFunction()
 				</div>
 				<p>Multi-line jQuery comments are enclosed within a combination of a forward slash and an asterisk like so:</p>
 				<p class="line-code"><code>/* comment */</code></p>		
-			</article>
+			</div>
 		</section>
 		<hr>
 
 		<section id="external-links" class="section">
 			<h2>External links</h2>
-			<article>
+			<div class="content">
 				<p>External links for this Technical Documentation Page.</p>
 				<ul>
 					<li><a href="https://en.wikipedia.org/wiki/JQuery" title="wikipedia">JQuery Wikipedia</a></li>
 					<li><a href="https://www.geeksforgeeks.org/jquery-tutorials/" title="jquery-tutorials">JQuery Geeks for Geeks</a></li>
 					<li><a href="https://learn.jquery.com/" title="jquery">JQuery</a></li>
 				</ul>
-			</article>
+			</div>
 		</section>
 	</main>	
 	<footer>
